--- a/css_basic/base.css
+++ b/css_basic/base.css
@@ -50,6 +50,7 @@ q:before, q:after {
 table {
 	border-collapse: collapse;
 	border-spacing: 0;
+	
 }
 
 
@@ -151,8 +152,9 @@ aside p {
 footer {
 	padding: 5px 15px;
 	height: 80px;
-}
+	text-align: center;
 
+}
 
 /* Text styles and margins */
 
