--- a/css_advanced/styles.css
+++ b/css_advanced/styles.css
@@ -387,31 +387,41 @@ footer {
     align-items: center;
 }
 
-/* Logo + brand text */
-.footer-left {
+footer {
+    background-color: #071629; /* adjust if needed */
+    padding: 50px 0;
+    color: #fff;
+    margin-bottom: 0px;
+}
+
+.footer-content {
     display: flex;
+    justify-content: space-between;
     align-items: center;
-    gap: 10px;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 20px;
+    
+    
 }
 
-.footer-logo {
-    width: 35px;
+.footer-left img.footer-logo {
+    width: 120px; /* adjust size if needed */
 }
 
-/* Social Icons */
-.footer-icons a img {
-    width: 25px;
+.footer-center .footer-small {
+    font-size: 14px;
+    text-align: center;
+}
+
+.footer-right i {
     margin-left: 20px;
-    transition: opacity 0.3s;
+    font-size: 20px;
+    cursor: pointer;
+    transition: 0.3s ease;
 }
 
-.footer-icons a img:hover {
-    opacity: 0.7;
-}
-
-/* Small text */
-.footer-small {
-    margin-top: 40px;
-    font-size: 12px;
-    color: #7a8895; /* Soft grey like screenshot */
+.footer-right i:hover {
+    transform: scale(1.2);
+    opacity: 0.8;
 }
