--- a/headphones/fonts/style.css
+++ b/headphones/fonts/style.css
@@ -1,12 +1,12 @@
 @font-face {
-  font-family: 'holberton_school-icon';
-  src: url('fonts/holberton_school-icon.eot');
-  src: url('fonts/holberton_school-icon.eot?#iefix') format('embedded-opentype'),
-       url('fonts/holberton_school-icon.woff') format('woff'),
-       url('fonts/holberton_school-icon.ttf') format('truetype'),
-       url('fonts/holberton_school-icon.svg#holberton_school-icon') format('svg');
-  font-weight: normal;
-  font-style: normal;
+    font-family: 'holberton_school-icon';
+    src: url('holberton_school-icon.eot');
+    src: url('holberton_school-icon.eot?#iefix') format('embedded-opentype'),
+         url('holberton_school-icon.woff') format('woff'),
+         url('holberton_school-icon.ttf') format('truetype'),
+         url('holberton_school-icon.svg#holberton_school-icon') format('svg');
+    font-weight: normal;
+    font-style: normal;
 }
 
 [class^="holberton_school-icon-"], [class*=" holberton_school-icon-"] {
@@ -86,3 +86,4 @@
 .holberton_school-icon-star:before {
   content: "\e914";
 }
+
